# tui-music-player

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: animation.cpp.677F9E5D63B5F98B.idx  animation.hpp.FD1CA045D035732C.idx  automerge.cpp.4C9149A6A53A53C8.idx  autoreset.hpp.6B251FEF76D3297A.idx  blink.cpp.8EBBDD4E60F4B6E9.idx  bold.cpp.BA2358F9ECB86522.idx  border.cpp.B49F8E4BC9AAD107.idx  box.cpp.46D6C5FD5374CA94.idx  box.hpp.25FC8E013F975300.idx  box_helper.cpp.A3E2A629E8D0C382.idx  box_helper.hpp.F28906884B4D7FB9.idx  button.cpp.B9FBD4034F0A755B.idx  canvas.cpp.D51B0FEA9CA3CA7D.idx  canvas.hpp.50B89B70DF66EB6D.idx  captured_mouse.hpp.EFD1537C610B7652.idx  catch_event.cpp.577C132DB380E677.idx  checkbox.cpp.DEC8B7C7BD3A9438.idx  clear_under.cpp.0279036FB906D4E1.idx  collapsible.cpp.AAEFD7423F53BE62.idx  color.cpp.973E292B38B81AAB.idx  color.cpp.AD02ED3C9714D6A3.idx  color.hpp.ACEBCE7811AFC8B1.idx  color_info.cpp.020D1EFE466A6C3C.idx  color_info.hpp.E055F9C76A80F759.idx  component.cpp.FDDD8C72E1CC6E3F.idx  component.hpp.A135D426FFBFFCF5.idx  component_base.hpp.75216F54291DEA14.idx  component_options.cpp.509A8A7B614E9900.idx  component_options.hpp.68AAE6E889D5DECA.idx  composite_decorator.cpp.828E8C7E230E1233.idx  container.cpp.6C26FE17358241DA.idx  dbox.cpp.D64DCA254FA95917.idx  deprecated.hpp.38354434EC365BF0.idx  deprecated.hpp.C27F58FDA23293B4.idx  dim.cpp.F25CCE87C06C93BC.idx  direction.hpp.36F22581550669DC.idx  dropdown.cpp.C05936DF7817D853.idx  elements.hpp.5071BE06B30AF5AE.idx  event.cpp.58670A1500A43087.idx  event.hpp.06284822E6A92027.idx  (+72 more)
src/: main.cpp
